--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Caveat:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 body {
-    background-image: url('https://images.wallpapersden.com/image/download/4k-cloudy-evening-cityscape_bmZlbGqUmZqaraWkpJRoam1prWdlaW0.jpg');
+    background-image: url('../img/bg.jpg'); /* Updated path */
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -9,7 +9,7 @@ body {
 }
 
 #main {
-    background-image: url('https://i.pinimg.com/originals/c2/9a/d9/c29ad93c7ddc9a17cc6d591b7c7b01c3.png'); 
+    background-image: url('../img/mainbg.png'); /* Updated path */
     width: 300px;
     height: 400px;
     position: fixed; 
@@ -38,7 +38,7 @@ body {
 }
 
 #avatar {
-    background-image: url('https://i.postimg.cc/Rh3yLkB5/imba.jpg'); 
+    background-image: url('../img/avatar.jpg'); /* Updated path */
     width: 150px;
     height: 150px;
     position: fixed; 
@@ -50,6 +50,8 @@ body {
     z-index: 1;
     background-size: cover;
     background-position: center;
+    background-position-x: 1px;
+    background-position-y: 0px;
 }
 
 #contacts {
