--- a/css/project.css
+++ b/css/project.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Caveat:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 body {
-    background-image: url('../img/bg.jpg'); /* Updated path */
+    background-image: url('/img/bg.jpg'); /* Updated path */
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
@@ -9,7 +9,7 @@ body {
 }
 
 #main {
-    background-image: url('../img/mainbg.png'); /* Updated path */
+    background-image: url('/img/mainbg.png'); /* Updated path */
     width: 300px;
     height: 400px;
     position: fixed; 
@@ -38,7 +38,7 @@ body {
 }
 
 #avatar {
-    background-image: url('../img/avatar.jpg'); /* Updated path */
+    background-image: url('/img/avatar.jpg'); /* Updated path */
     width: 150px;
     height: 150px;
     position: fixed; 
@@ -78,3 +78,4 @@ body {
 #contacts img:hover {
     transform: scale(1.1);
 }
+
